transmission/03-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: transmission
  labels:
    app: transmission
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 9091
      targetPort: 9091
      nodePort: 30091
      name: http
    - protocol: TCP
      port: 51413
      targetPort: 51413
      nodePort: 30413
      name: bittorrent-tcp
    - protocol: UDP
      port: 51413
      targetPort: 51413
      nodePort: 30413
      name: bittorrent-udp
  selector:
    app: transmission
